[project]
name = "nina"
description = '''
Application to detect, track and calculate statistics of objects in video.
'''
authors = [
  "Birger Johan Nordølum",
  "Eirik Osland Lavik",
  "Kristian André Dahl Haugen",
  "Tom-Ruben Traavik Kvalvaag"
]
license = "GPL-3.0"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/nina/version.py"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
skip = [
    "./src/vendor",
]

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
  | venv
  | node_modules
  | src/vendor
  | README.md
)/
'''
verbose = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v --ignore=ci --import-mode=importlib"
testpaths = ["tests"]
filterwarnings = [
  'ignore:the imp module is deprecated:DeprecationWarning',
  'ignore:"@coroutine" decorator is deprecated:DeprecationWarning',
  'ignore:Named tensors and all their associated APIs:UserWarning'
]
log_cli = "False"
log_level = "INFO"
norecursedirs = [".git", ".tox", ".env", "dist", "build"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "*/.tox/*",
  "*/__main__.py",
  "*/setup.py",
  "*/.venv*/*",
  "*/venv*/*",
  "src/nina/version.py",
  "src/vendor/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.tox]
legacy_tox_ini = '''
[tox]
envlist = py{38,39}-{integration,unit},
          coverage
isolated_build = True
skipsdist = True

[testenv]
deps =
    -e .[testing, cpu]
setenv =
    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
commands =
    integration: coverage run -p -m pytest tests/integration {posargs}
    unit: coverage run -p -m pytest tests/unit {posargs}

[testenv:coverage]
deps = coverage[toml] >= 5.0
skip_install = True
setenv =
    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage}
commands = coverage combine
           coverage report -m
           coverage xml
depends = py39-{integration,unit}
'''
