[metadata]
name = nina
version = attr: nina.__version__
description = Application to detect, track and calculate statistics of objects in video.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
install_requires =
    async-exit-stack
    async_generator
    fastapi[all]>=0.63.0
    filterpy>=1.4.5
    flask==1.1.4
    flask-paginate>=0.8.1
    lap>=0.4.0
    matplotlib>=3.3.4
    numpy>=1.20.1
    opencv-python>=4.5.1
    pillow>=8.1.2
    pydantic>=1.8.1
    pyyaml>=5.4.1
    requests>=2.25.1
    seaborn>=0.11.1
    sort@https://github.com/R0flcopt3r/sort/tarball/02b8856bef3972c7086b25b558e533926a274d1c
    sqlalchemy>=1.4.21
    torch>=1.8.0
    torchvision>=0.9.0
    tqdm>=4.59.0
    uvicorn[standard]>=0.13.4
    waitress>=2.0.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    *tests*
    build*
    dist*
    docs*
    tests*
    *.tests

[options.entry_points]
console_scripts =
    nina = nina.run:main
    nina-ui = ui.run:serve
    nina-core = core.main:main
    nina-detection = detection.main:main
    nina-tracing = tracing.main:main

[options.extras_require]
dev =
    black==21.6b0
    build==0.5.1
    flake8
    isort==5.9.2
    mypy>=0.902
    pre-commit
    pydocstyle
    pyupgrade==2.21.2
    sqlalchemy[mypy]>=1.4.21
    types-all
    typing-extensions==3.10.0.0
testing =
    coverage[toml]
    pytest>=4.0.0
    requests-mock
    tox

[pydocstyle]
convention = numpy

[flake8]
ignore = E501,F403,F401,W503,E203
max-line-length = 80
exclude =
    .venv,
    tests,
    __pycache__,
    build,
    dist

[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = sqlalchemy.ext.mypy.plugin
