[metadata]
name = nina
description = Application to detect, track and calculate statistics of objects in video.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MindTooth/fish-code
author = Birger Johan Nordølum, Eirik Osland Lavik, Kristian André Dahl Haugen, Tom-Ruben Traavik Kvalvaag
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
install_requires =
    async-exit-stack
    async_generator
    fastapi[all]>=0.63.0
    filterpy>=1.4.5
    flask==1.1.4
    flask-paginate>=0.8.1
    matplotlib>=3.3.4
    numpy>=1.20.1
    opencv-python-headless>=4.5.1
    pillow>=8.1.2
    pydantic>=1.8.1
    pyyaml>=5.4.1
    requests>=2.25.1
    scipy>=1.7.0
    seaborn>=0.11.1
    sort@https://github.com/R0flcopt3r/sort/tarball/12e0602e99b11bac49ae48a53f25d60cf37b8c72
    sqlalchemy>=1.4.21
    tqdm>=4.59.0
    uvicorn[standard]>=0.13.4
    waitress>=2.0.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools>=42.0
    setuptools-scm>=3.4
zip_safe = False

[options.packages.find]
where = src
exclude =
    *tests*
    build*
    dist*
    docs*
    tests*
    *.tests

[options.entry_points]
console_scripts =
    nina = nina.run:main
    nina-ui = ui.run:serve
    nina-core = core.main:main
    nina-detection = detection.main:main
    nina-tracing = tracing.main:main

[options.extras_require]
cpu =
    torch==1.9.0
    torchvision==0.10.0
dev =
    black==21.9b0
    build==0.7.0
    flake8
    isort==5.9.3
    mypy>=0.902
    pre-commit
    pydocstyle
    pyupgrade==2.28.0
    sqlalchemy[mypy]>=1.4.21
    types-all
    typing-extensions==3.10.0.2
gpu =
    torch==1.9.0+cu111
    torchvision==0.10.0+cu111
testing =
    coverage[toml]
    pytest>=4.0.0
    requests-mock
    tox

[pydocstyle]
convention = numpy

[flake8]
ignore = E501,F403,F401,W503,E203
max-line-length = 80
exclude =
    .venv,
    tests,
    __pycache__,
    build,
    dist

[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = sqlalchemy.ext.mypy.plugin
