[metadata]
name = nina
description = Application to detect, track and calculate statistics of objects in video.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MindTooth/fish-code
author = Birger Johan Nordølum, Eirik Osland Lavik, Kristian André Dahl Haugen, Tom-Ruben Traavik Kvalvaag
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
install_requires =
    async-exit-stack==1.0.1
    async-generator==1.10
    fastapi[all]==0.73.0
    filterpy==1.4.5
    flask==2.0.2
    flask-paginate==2022.1.8
    matplotlib==3.5.1
    numpy==1.22.2
    opencv-python-headless==4.5.5.62
    pillow==9.0.1
    pydantic==1.9.0
    pyyaml==5.4.1
    requests==2.27.1
    scipy==1.8.0
    seaborn==0.11.2
    sqlalchemy==1.4.31
    tqdm==4.62.3
    uvicorn[standard]==0.17.4
    waitress==2.0.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools>=42.0
    setuptools-scm>=3.4
zip_safe = False

[options.packages.find]
where = src
exclude =
    *tests*
    build*
    dist*
    docs*
    tests*
    *.tests

[options.entry_points]
console_scripts =
    nina = nina.run:main
    nina-ui = ui.run:serve
    nina-core = core.main:main
    nina-detection = detection.main:main
    nina-tracing = tracing.main:main

[options.extras_require]
cpu =
    torch==1.10.1
    torchvision==0.11.2
dev =
    black>=22.1.0
    build>=0.7.0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.902
    pre-commit>=2.17.0
    pydocstyle>=6.1.1
    pyupgrade>=2.31.0
    sqlalchemy[mypy]>=1.4.21
    types-all>=1.0.0
    typing-extensions==4.0.1
gpu =
    torch==1.10.1+cu113
    torchvision==0.11.2+cu113
testing =
    covdefaults>=2.0.0
    coverage[toml]>=6.3.1
    pytest>=4.0.0
    requests-mock>=1.9.3
    tox>=3.24.5

[pydocstyle]
convention = numpy

[flake8]
ignore = E501,F403,F401,W503,E203
max-line-length = 80
exclude =
    .venv,
    tests,
    __pycache__,
    build,
    dist
    src/vendor

[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = sqlalchemy.ext.mypy.plugin

[mypy-vendor.*]
ignore_errors = True
