[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.23"
pre-commit = "^2.10.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pylint = "^2.6.0"
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | \.ipynb_checkpoints
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | rapport
    | opppgave
    | hdr-bilder
    | venv
    | node_modules
    | README.md
)/
'''
verbose = true

[tool.coverage.run]
source = [
    "core",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
