[tool.poetry]
name = "detection"
version = "0.1.0"
description = ""
authors = ["Tom-R Kvalvaag <tom-ruben@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.0"
torchvision = "^0.9.0"
opencv-python = "^4.5.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
fastapi = "^0.63.0"
Pillow = "^8.1.2"
PyYAML = "^5.4.1"
tqdm = "^4.59.0"
uvicorn = { extras = ["standard"], version = "^0.13.4" }
requests = "^2.25.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
mypy = "^0.812"
pydocstyle = "^5.1.1"
pre-commit = "^2.11.0"
pytest = "^6.2.2"
coverage = "^5.5"
pytest-cov = "^2.11.1"
types-all = "^1.0.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
src_paths = ["detection", "tests"]

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | \.ipynb_checkpoints
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | venv
    | node_modules
    | README.md
)/
'''
verbose = true

[tool.coverage.run]
source = ["detection"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
  'ignore:the imp module is deprecated:DeprecationWarning',
  'ignore:"@coroutine" decorator is deprecated:DeprecationWarning'
]
