[tool.poetry]
name = "tracing"
version = "0.1.0"
description = ""
authors = ["R0flcopt3r <12752060+R0flcopt3r@users.noreply.github.com>"]


[tool.poetry.scripts]
tracing = "tracing.__main__:main"
api = "tracing.main:main"

[tool.poetry.dependencies]
python = "^3.7"
sort = { git = "https://github.com/R0flcopt3r/sort" }
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
pytest = "^5.2"
pycocotools = "^2.0.2"
scikit-image = "^0.18.1"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
debugpy = "^1.2.1"
mypy = "^0.800"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
isort = "^5.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
src_paths=["tracing", "tests"]

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | \.ipynb_checkpoints
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | rapport
    | opppgave
    | hdr-bilder
    | venv
    | node_modules
    | README.md
)/
'''

[tool.coverage.run]
source = [
    "tracing",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
