[tool.poetry]
name = "ui"
version = "0.3.0"
description = """
Application to detect fish and generate a report viewable
inside an iterface before being exported as raw data.
"""
authors = [
"Birger Johan Nordølum",
"Eirik Osland Lavik",
"Kristian André Dahl Haugen",
"Tom-Ruben Traavik Kvalvaag"
]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
requests = "^2.25.1"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
livereload = "^2.6.3"
isort = "^5.7.0"
coverage = {extras = ["toml"], version = "^5.5"}
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
src_paths = ["ui", "tests"]

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | \.ipynb_checkpoints
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | rapport
    | opppgave
    | hdr-bilder
    | venv
    | node_modules
    | README.md
)/
'''
verbose=true

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:the imp module is deprecated:DeprecationWarning',
    'ignore:"@coroutine" decorator is deprecated:DeprecationWarning'
]

[tool.coverage.run]
source = [
    "ui",
]
